ames/pds_web/test-data/volumes/bad/browse/shim.lbl
PDS_VERSION_ID                     = PDS3
^DOCUMENT = "shim.txt"
END